# Youtube-Scraper-Service

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  manifest  pyproject.toml  setup.cfg  setup.py
db/: README.md  schema.sql
db/migrations/: 20210619170757_add_youtube_db.sql
dbmate-docker/: Dockerfile
docs/: index.md
tests/: __init__.py  conftest.py
tests/api/: test_util.py  test_videos.py
youtube/: __init__.py  app.py  schedule.py
youtube/api/: videos.py  youtube.py
youtube/cron/: process_cron.py
youtube/domain/: models.py
youtube/exapi/: youtube.py
youtube/store/: __init__.py  repos.py
youtube/store/models/: model.py
youtube/utils/: config.py  consul_patch.py  flask.py  misc.py  schema.py
