[metadata]
name = youtube

[options]
packages = find:

[aliases]
test=pytest

[pep8]
max-line-length = 120

[tool:pytest]
markers =
    integration: tests that require db, redis etc setup

[flake8]
max-line-length =
    # Black defaults to this
    88
ignore =
    # Conflicts with black formatting
    E203,
    # Black formats without forcing strings or continous strings
    # Which flake8 lacks
    E501,
    # Missing type annotation for self in method, cls in classmethod
    ANN101, ANN102,
    # Missing type annotation for *args and **kwargs respectivly
    ANN002, ANN003
suppress-none-returning = True
